apps/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ntfy"
    gethomepage.dev/description: "ntfy"
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "ntfy.svg"
    external-dns.alpha.kubernetes.io/target: ""
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: ntfy.atoca.house
    http:
      paths:
      - backend:
          service:
            name: ntfy
            port:
              number: 80
        path: /
        pathType: Prefix
